# ps-battery

./: .release-please-config.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: bum-and-tag.yml  bump-and-tag.yml  check.yml  release-please.yml  release.yml  tag.yml  version.yml
src/: controller.rs  hid.rs  main.rs  ps5_bt.rs  ps_battery.rs  sound.rs  toast.rs  tray.rs
src/ps_battery/: audio.rs  controller.rs  controller_status_to_string.rs  controller_store.rs  get_controller_info.rs  get_playstation_controllers.rs  is_dnd_active.rs  log.rs  logger.rs  monitor.rs  parse_battery_and_charging.rs  play_sound.rs  poll_controllers.rs  read_controller_input_report.rs  send_bluetooth_feature_report.rs  send_controller_alerts.rs  send_controller_feature_report.rs  tray.rs
src/ps_battery/controller/: calibration.rs  info.rs  parse.rs  read.rs  report.rs  transport.rs
src/ps_battery/monitor/: cache.rs  device_list.rs  poll.rs
src/ps_battery/tray/: autostart.rs  balloon.rs  create_hidden_window.rs  menu.rs  show_balloon.rs  window.rs
