[package]
name = "ps-battery"
version = "1.15.0"
edition = "2024"

[dependencies]
hidapi = "2.6.3"
tokio = { version = "1.48.0", features = ["full"] }
windows = { version = "0.62", features = [
    "UI_Notifications",
    "Data_Xml_Dom",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Foundation",
    "Win32_System_Registry",
] }
