[package]
name = "ps-battery"
version = "1.18.0"
edition = "2024"

[build-dependencies]
winresource = "0.1"

[dependencies]
hidapi = "2.6.3"
windows ={ version = "0.62", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_System_Registry",
] }
